<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <EditText
        android:id="@+id/editTextInput"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        android:autofillHints="name"
        android:inputType="text"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:textColor="@color/black"
        android:hint="@string/enter_text_here"
        />

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/done" />
    <LinearLayout
        android:id="@+id/colorBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        android:layout_alignParentBottom="true"
        >

        <ImageButton
            android:id="@+id/red"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:contentDescription="@string/red" />

        <ImageButton
            android:id="@+id/blue"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:contentDescription="@string/blue" />

        <ImageButton
            android:id="@+id/pink"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/pink"
            android:contentDescription="@string/pink" />

        <ImageButton
            android:id="@+id/yellow"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/yellow"
            android:contentDescription="@string/yellow" />

        <ImageButton
            android:id="@+id/black"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:contentDescription="@string/black" />

        <ImageButton
            android:id="@+id/white"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/white" />
    </LinearLayout>
</RelativeLayout>