<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.camera.cameraApp.ImageEditor">

    <ja.burhanrashid52.photoeditor.PhotoEditorView
        android:id="@+id/photoEditorView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/colorBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:photo_src="@drawable/camera_flash_off" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_margin="10dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_margin="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/colorBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/toolBar">

        <ImageButton
            android:id="@+id/red"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:contentDescription="@string/red" />

        <ImageButton
            android:id="@+id/blue"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:contentDescription="@string/blue" />

        <ImageButton
            android:id="@+id/pink"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/pink"
            android:contentDescription="@string/pink" />

        <ImageButton
            android:id="@+id/yellow"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/yellow"
            android:contentDescription="@string/yellow" />

        <ImageButton
            android:id="@+id/black"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:contentDescription="@string/black" />

        <ImageButton
            android:id="@+id/white"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/white" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/undoButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/text"
        android:scaleType="centerCrop"
        android:src="@drawable/undo_button"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/colorBar"
        app:layout_constraintEnd_toStartOf="@+id/redoButton" />

    <ImageButton
        android:id="@+id/redoButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/text"
        android:scaleType="centerCrop"
        android:src="@drawable/redo_button"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/colorBar"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#16182E"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/textLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/textButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/text"
                android:scaleType="centerCrop"
                android:src="@drawable/add_text_vector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_text"
                android:textColor="#EFE9E9" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/drawLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/drawButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/drawing"
                android:scaleType="centerCrop"
                android:src="@drawable/draw_vector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/draw"
                android:textColor="#EFE9E9" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/stickerLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/stickerButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/stickers"
                android:scaleType="centerCrop"
                android:src="@drawable/add_stickers_vector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_stickers"
                android:textColor="#EFE9E9" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>