<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.camera.cameraApp.PreviewActivity">



    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.camera.view.PreviewView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/heightRatioGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.67" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/camera_container" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/heightRatioGuideline"
        app:srcCompat="@drawable/camera_container" />

    <ImageButton
        android:id="@+id/video"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:background="@drawable/right_unselected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/photo"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:text="@string/video"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/video"
        app:layout_constraintEnd_toEndOf="@+id/video"
        app:layout_constraintStart_toStartOf="@+id/video"
        app:layout_constraintTop_toTopOf="@+id/video" />

    <ImageButton
        android:id="@+id/photo"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:background="@drawable/left_selected"
        app:layout_constraintEnd_toStartOf="@+id/video"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:text="@string/photo"
        android:textColor="@color/yellow"
        app:layout_constraintBottom_toBottomOf="@+id/photo"
        app:layout_constraintEnd_toStartOf="@+id/video"
        app:layout_constraintStart_toStartOf="@+id/photo"
        app:layout_constraintTop_toTopOf="@+id/photo" />

    <ImageButton
        android:id="@+id/captureButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/capture_button"
        android:scaleType="centerCrop"
        android:src="@drawable/capture_button"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageButton
        android:id="@+id/cameraFlipButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/flip_button"
        android:scaleType="centerCrop"
        android:src="@drawable/camera_flip_button"
        app:layout_constraintBottom_toBottomOf="@+id/captureButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/captureButton"
        app:layout_constraintTop_toTopOf="@+id/captureButton" />

    <ImageButton
        android:id="@+id/galleryButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/flip_button"
        android:scaleType="centerCrop"
        android:src="@drawable/gallery_vector"
        app:layout_constraintBottom_toBottomOf="@+id/captureButton"
        app:layout_constraintEnd_toStartOf="@+id/captureButton"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/captureButton" />

    <ImageButton
        android:id="@+id/flashLightButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/flash_button"
        android:scaleType="centerCrop"
        android:src="@drawable/camera_flash_auto"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewFinder" />
</androidx.constraintlayout.widget.ConstraintLayout>